@@ -1,0 +1,200 @@
+<?xml version="1.0"?>
+<?xml-stylesheet href="../releases.xsl" type="text/xsl"?>
+<release>
+  <module>gst-plugins-base</module>
+  <module-fancy>GStreamer Base Plug-ins</module-fancy>
+  <name>Chao</name>
+  <version>0.10.6</version>
+
+  <intro>
+
+<p>
+The GStreamer team is proud to announce a new release
+in the 0.10.x stable series of the
+GStreamer Base Plug-ins.
+</p>
+<p>
+The 0.10.x series is a stable series targeted at end users.
+It is not API or ABI compatible with the stable 0.8.x series.
+It is, however, parallel installable with the 0.8.x series.
+</p>
+
+<p>
+This module contains a set of reference plugins, base classes for other
+plugins, and helper libraries.
+
+This module is kept up-to-date together with the core developments.  Element
+writers should look at the elements in this module as a reference for
+their development.
+
+This module contains elements for, among others:
+<ul>
+  <li>device plugins: x(v)imagesink, alsa, v4lsrc, cdparanoia</li>
+  <li>containers: ogg</li>
+  <li>codecs: vorbis, theora</li>
+  <li>text: textoverlay, subparse</li>
+  <li>sources: audiotestsrc, videotestsrc, gnomevfssrc</li>
+  <li>network: tcp</li>
+  <li>typefind</li>
+  <li>audio processing: audioconvert, adder, audiorate, audioscale, volume</li>
+  <li>visualisation: libvisual</li>
+  <li>video processing: ffmpegcolorspace</li>
+  <li>aggregate elements: decodebin, playbin</li>
+</ul>
+
+Other modules containing plug-ins are:
+
+<dl>
+<dt>gst-plugins-good</dt>
+<dd>contains a set of well-supported plug-ins under our preferred license</dd>
+<dt>gst-plugins-ugly</dt>
+<dd>contains a set of well-supported plug-ins, but might pose problems for
+    distributors</dd>
+<dt>gst-plugins-bad</dt>
+<dd>contains a set of less supported plug-ins that haven't passed the
+    rigorous quality testing we expect</dd>
+</dl>
+
+</p>
+  </intro>
+  <features>
+    <feature>Parallel installability with 0.8.x series</feature>
+    <feature>Threadsafe design and API</feature>
+
+    <feature>QoS in sinks and transform elements</feature>
+    <feature>Needs GStreamer 0.10.5 for new GstBaseSink::async_playback() vmethod</feature>
+    <feature>added theoraparse element</feature>
+  </features>
+
+  <applications>
+  </applications>
+      <contributors>
+	<person>Andy Wingo</person>
+	<person>Antoine Tremblay</person>
+	<person>David Schleef</person>
+	<person>Edward Hervey</person>
+	<person>Fabrizio Gennari</person>
+	<person>Jan Schmidt</person>
+	<person>Julien MOUTTE</person>
+	<person>Michael Smith</person>
+	<person>Michal Benes</person>
+	<person>Sebastien Moutte</person>
+	<person>Stefan Kost</person>
+	<person>Thomas Vander Stichele</person>
+	<person>Tim-Philipp Müller</person>
+	<person>Tommi Myöhänen</person>
+	<person>Wim Taymans</person>
+	<person>j^</person>
+  </contributors>
+
+
+
+<!--
+  <api>
+    <additions>
+    </additions>
+    <depreciations>
+    </depreciations>
+  </api>
+-->
+
+  
+
+  
+
+  <bugs>
+    <bug>
+      <id>313136</id>
+      <summary>[playbin] hang while playing truncated ogg file</summary>
+    </bug>
+    <bug>
+      <id>172848</id>
+      <summary>[subparse] subtitles with special chars are displayed as ...</summary>
+    </bug>
+    <bug>
+      <id>305279</id>
+      <summary>[riff] uncompressed AVIs with 24bpp don't work</summary>
+    </bug>
+    <bug>
+      <id>320765</id>
+      <summary>[ffmpegcolorspace] make win32+msvc compliant, don't use _...</summary>
+    </bug>
+    <bug>
+      <id>323852</id>
+      <summary>Disable tests/icles on platforms that do not have X</summary>
+    </bug>
+    <bug>
+      <id>325653</id>
+      <summary>build errors compiling audioresample on win32(vs7)</summary>
+    </bug>
+    <bug>
+      <id>327357</id>
+      <summary>gst-plugins-base fails to compile with GCC 4.1</summary>
+    </bug>
+    <bug>
+      <id>334620</id>
+      <summary>[gnomevfssrc] fails to connect to icecast streaming servers</summary>
+    </bug>
+    <bug>
+      <id>334822</id>
+      <summary>[ffmpegcolorspace] YVU9 support</summary>
+    </bug>
+    <bug>
+      <id>335028</id>
+      <summary>[typefinding] ID3 v1 tag is not recognized with mp3-in-wa...</summary>
+    </bug>
+    <bug>
+      <id>335365</id>
+      <summary>inefficient use of GList in gst-plugins-base</summary>
+    </bug>
+    <bug>
+      <id>336190</id>
+      <summary>[gnomevfssink] should accept non-URI filenames as &quot; location &quot; </summary>
+    </bug>
+    <bug>
+      <id>336194</id>
+      <summary>[gnomevfssrc] some minor memory leaks</summary>
+    </bug>
+    <bug>
+      <id>336477</id>
+      <summary>plugins need better/univied descriptions</summary>
+    </bug>
+    <bug>
+      <id>336617</id>
+      <summary>Unable to recognise MPEG TS stream</summary>
+    </bug>
+    <bug>
+      <id>337548</id>
+      <summary>Memory leaks in basertpdepayload</summary>
+    </bug>
+    <bug>
+      <id>337945</id>
+      <summary>[oggdemux] segment stop position ignored</summary>
+    </bug>
+    <bug>
+      <id>338419</id>
+      <summary>Regression in the handling of files with multiple audio/s...</summary>
+    </bug>
+    <bug>
+      <id>338897</id>
+      <summary>Videoscale crashes as part of DVD to Ogg transcoding</summary>
+    </bug>
+    <bug>
+      <id>339013</id>
+      <summary>[videorate] Goes into an infinite loop</summary>
+    </bug>
+    <bug>
+      <id>339047</id>
+      <summary>[riff] handle H264 fourcc in addition to h264</summary>
+    </bug>
+    <bug>
+      <id>339212</id>
+      <summary>ISO file typefinding regression</summary>
+    </bug>
+    <bug>
+      <id>330748</id>
+      <summary>deadlock in base audio sink on playing- &gt; paused state change</summary>
+    </bug>
+  </bugs>
+
+</release>
