@@ -1,0 +1,192 @@
+<?xml version="1.0"?>
+<?xml-stylesheet href="../releases.xsl" type="text/xsl"?>
+<release>
+  <module>gstreamer</module>
+  <module-fancy>GStreamer</module-fancy>
+  <name>Fogo</name>
+  <version>0.10.5</version>
+
+  <intro>
+
+<p>
+The GStreamer team is proud to announce a new release
+in the 0.10.x stable series of the
+core of the GStreamer streaming media framework.
+</p>
+<p>
+The 0.10.x series is a stable series targeted at end users.
+It is not API or ABI compatible with the stable 0.8.x series.
+It is, however, parallel installable with the 0.8.x series.
+</p>
+<p>
+The 0.10.x series has been reworked for threadsafety.  It also features
+various feature additions and enchancements.
+</p>
+<p>
+This module, gstreamer, only contains core functionality.
+For actual media playback, you will need other modules.
+<dl>
+<dt>gst-plugins-base</dt>
+<dd>contains a basic set of well-supported plug-ins</dd>
+<dt>gst-plugins-good</dt>
+<dd>contains a set of well-supported plug-ins under our preferred license</dd>
+<dt>gst-plugins-ugly</dt>
+<dd>contains a set of well-supported plug-ins, but might pose problems for
+    distributors</dd>
+<dt>gst-plugins-bad</dt>
+<dd>contains a set of less supported plug-ins that haven't passed the
+    rigorous quality testing we expect</dd>
+</dl>
+
+</p>
+  </intro>
+  <features>
+    <feature>Parallel installability with 0.8.x series</feature>
+    <feature>Threadsafe design and API</feature>
+
+    <feature>QoS in BaseTransform</feature>
+    <feature>gcc 4.1 fixes</feature>
+    <feature>BaseTransform reworked</feature>
+    <feature>Bus reworked; signal API added</feature>
+  </features>
+
+  <applications>
+<p>
+Applications ported to GStreamer 0.10 include Totem, RhythmBox, Sound-Juicer,
+Gnome Media, Flumotion, Amarok, Jamboree, Pitivi, Istanbul, AnnoAmp, Elisa,
+and others.
+Let us know if you want to be added to this list.
+</p>
+  </applications>
+
+    <contributors>
+	<person>Andy Wingo</person>
+	<person>Edward Hervey</person>
+	<person>Jan Schmidt</person>
+	<person>Julien MOUTTE</person>
+	<person>Julio M. Merino Vidal</person>
+	<person>Loïc Minier</person>
+	<person>Mark Nauwelaerts</person>
+	<person>Michael Smith</person>
+	<person>Paolo Borelli</person>
+	<person>Sebastien Moutte</person>
+	<person>Stefan Kost</person>
+	<person>Thomas Vander Stichele</person>
+	<person>Tim-Philipp Müller</person>
+	<person>Tommi Myöhänen</person>
+	<person>Wim Taymans</person>
+	<person>Zaheer Abbas Merali</person>
+  </contributors>
+
+
+  <api>
+    <additions>
+    <item>gst_controller_unset_all()</item>
+    <item>gst_pad_query_peer_position()</item>
+    <item>gst_pad_query_peer_duration()</item>
+    <item>gst_pad_query_peer_convert()</item>
+    <item>GstBaseSink::async_play()</item>
+    <item>GstBaseSrc::qos</item>
+    <item>gst_base_sink_set_qos_enabled()</item>
+    <item>gst_base_sink_is_qos_enabled()</item>
+    <item>gst_base_transform_update_qos()</item>
+    <item>gst_base_transform_set_qos_enabled()</item>
+    <item>gst_base_transform_is_qos_enabled()</item>
+    <item>gst_pipeline_get_delay()</item>
+    <item>gst_pipeline_set_delay()</item>
+    </additions>
+<!--
+    <depreciations>
+    </depreciations>
+-->
+  </api>
+
+  
+
+  <bugs>
+    <bug>
+      <id>131079</id>
+      <summary>[PATCH] [api] loading a class leaves elementfactory blank</summary>
+    </bug>
+    <bug>
+      <id>317048</id>
+      <summary>gstreamer Cygwin build fixes</summary>
+    </bug>
+    <bug>
+      <id>325599</id>
+      <summary>Build fails with GCC 4.1</summary>
+    </bug>
+    <bug>
+      <id>327315</id>
+      <summary>GStreamer CVS head files to build with GCC 4.1</summary>
+    </bug>
+    <bug>
+      <id>331248</id>
+      <summary>[basesink] filesink spews warnings when used with flacenc</summary>
+    </bug>
+    <bug>
+      <id>332151</id>
+      <summary>xml registry loader should use mmap() where possible</summary>
+    </bug>
+    <bug>
+      <id>332390</id>
+      <summary>[GstQueue/GstPad] queue pauses immediately when linked, p...</summary>
+    </bug>
+    <bug>
+      <id>332986</id>
+      <summary>Something wrong in caps checking...</summary>
+    </bug>
+    <bug>
+      <id>334109</id>
+      <summary>pkg-config files must link with the same check library th...</summary>
+    </bug>
+    <bug>
+      <id>334303</id>
+      <summary>Stale libgnomeui check in configure</summary>
+    </bug>
+    <bug>
+      <id>334434</id>
+      <summary>Missing functions in def files for dlls</summary>
+    </bug>
+    <bug>
+      <id>335195</id>
+      <summary>GST_BOILERPLATE_FULL etc isn' optimised</summary>
+    </bug>
+    <bug>
+      <id>335480</id>
+      <summary>start with debugging disabled</summary>
+    </bug>
+    <bug>
+      <id>335513</id>
+      <summary>totem goes (and stays) out of sync when running bittorrent</summary>
+    </bug>
+    <bug>
+      <id>336336</id>
+      <summary>[queue] Queue might block in EOS</summary>
+    </bug>
+    <bug>
+      <id>336945</id>
+      <summary>[filesink] throws error when writing 0 bytes</summary>
+    </bug>
+    <bug>
+      <id>337103</id>
+      <summary>small cleanup in gstplugin.c</summary>
+    </bug>
+    <bug>
+      <id>337386</id>
+      <summary>Pipeline bus is not initially flushing</summary>
+    </bug>
+    <bug>
+      <id>338711</id>
+      <summary>Internal data flow error with latest updates for FC5 with...</summary>
+    </bug>
+    <bug>
+      <id>326311</id>
+      <summary>basesink does not call the PAUSED- &gt; PLAYING change_state f...</summary>
+    </bug>
+    <bug>
+      <id>326998</id>
+      <summary>GstBaseSrc's send_event handler ignores seek requests aft...</summary>
+    </bug>
+  </bugs>
+</release>
