@@ -44,21 +44,14 @@ For actual media playback, you will need other modules.
     <feature>Parallel installability with 0.8.x series</feature>
     <feature>Threadsafe design and API</feature>
 
-    <feature>state lock redefined</feature>
-    <feature>Extensive documentation updates</feature>
-    <feature>BaseTransform reworked</feature>
-    <feature>Bus reworked; signal API added</feature>
+    <feature></feature>
   </features>
 
   <applications>
 <p>
-At this point, ports of existing applications to 0.10 are still experimental.
-Totem HEAD has a configure option to build the 0.10 backend.
-A patch for Rhythmbox is maintained at
-<A href="http://bugzilla.gnome.org/show_bug.cgi?id=309609">
-http://bugzilla.gnome.org/show_bug.cgi?id=309609</A>.
-Jamboree builds against GStreamer 0.10.
-Flumotion has been ported to 0.10 as well.
+Applications ported to GStreamer 0.10 include Totem, RhythmBox, Sound-Juicer,
+Gnome Media, Flumotion, Amarok, Jamboree, Pitivi, Istanbul, AnnoAmp, Elisa, and others.
+Let us know if you want to be added to this list.
 </p>
   </applications>
 
